import {
	mkdirSync,
	mkdtempSync,
	readFileSync,
	rmSync,
	writeFileSync,
} from "node:fs";
import { tmpdir } from "node:os";
import { join } from "node:path";
import { describe, expect } from "vitest";

import { test as originalTest } from "../test_utils/fixtures";
import { ENV_PULL_SKIPPED_HINT } from "./env";

// All tests in this file share a single temporary directory whose path is
// normalized in snapshots to `<TMP>` so absolute paths in command output stay
// stable across runs and machines.
const TEST_TMP = mkdtempSync(join(tmpdir(), "neonctl-checkout-"));

const test = originalTest.extend<{
	readFile: (name: string) => string;
	removeFile: (name: string) => void;
	// Each test gets its OWN sub-directory under TEST_TMP so the `.gitignore`
	// scaffolded next to the `.neon` written by one test doesn't affect another.
	tmpContext: (label: string, seed?: Record<string, unknown>) => string;
}>({
	// eslint-disable-next-line no-empty-pattern
	readFile: async ({}, use) => {
		await use((name) => readFileSync(name, "utf-8"));
	},
	// eslint-disable-next-line no-empty-pattern
	removeFile: async ({}, use) => {
		await use((name) => {
			try {
				rmSync(name);
			} catch {
				// ignore
			}
		});
	},
	// eslint-disable-next-line no-empty-pattern
	tmpContext: async ({}, use) => {
		await use((label, seed) => {
			const dir = join(TEST_TMP, label);
			mkdirSync(dir, { recursive: true });
			const ctx = join(dir, ".neon");
			if (seed) {
				writeFileSync(ctx, JSON.stringify(seed, null, 2));
			}
			return ctx;
		});
	},
});

const parseContext = (raw: string) =>
	JSON.parse(raw) as Record<string, unknown>;

describe("checkout", () => {
	test("resolves a branch by name and writes the branch name to a fresh .neon", async ({
		testCliCommand,
		readFile,
		tmpContext,
	}) => {
		const ctx = tmpContext("by_name_fresh");
		await testCliCommand([
			"checkout",
			"main",
			"--project-id",
			"test",
			"--no-env-pull",
			"--context-file",
			ctx,
		]);
		expect(parseContext(readFile(ctx))).toEqual({
			projectId: "test",
			branch: "main",
		});
	});

	test("announces the branch currently pinned before switching to a new one", async ({
		testCliCommand,
		removeFile,
		tmpContext,
	}) => {
		// A `.neon` already pinned to `main`: checkout should report where we are
		// ("Currently on branch main") before it pins the new branch, so the switch
		// is visible and a wrong checkout is easy to spot.
		const ctx = tmpContext("announce_current", {
			projectId: "test",
			branch: "main",
		});
		await testCliCommand(
			["checkout", "test_branch", "--no-env-pull", "--context-file", ctx],
			{
				stderr:
					`INFO: → Currently on branch main ` +
					`INFO: Checked out branch br-sunny-branch-123456 on project test. Updated ${ctx}. ` +
					`INFO: ${ENV_PULL_SKIPPED_HINT}`,
			},
		);
		removeFile(ctx);
	});

	test("resolves a branch by id and writes the branch name to a fresh .neon", async ({
		testCliCommand,
		readFile,
		tmpContext,
	}) => {
		const ctx = tmpContext("by_id_fresh");
		await testCliCommand([
			"checkout",
			"br-sunny-branch-123456",
			"--project-id",
			"test",
			"--no-env-pull",
			"--context-file",
			ctx,
		]);
		expect(parseContext(readFile(ctx))).toEqual({
			projectId: "test",
			branch: "test_branch",
		});
	});

	test("preserves orgId/projectId already present in the .neon file", async ({
		testCliCommand,
		readFile,
		tmpContext,
	}) => {
		const ctx = tmpContext("preserve_org", {
			orgId: "org-keep",
			projectId: "test",
		});
		await testCliCommand([
			"checkout",
			"test_branch",
			"--no-env-pull",
			"--context-file",
			ctx,
		]);
		expect(parseContext(readFile(ctx))).toEqual({
			orgId: "org-keep",
			projectId: "test",
			branch: "test_branch",
		});
	});

	test("heals a missing orgId by resolving it from the project", async ({
		testCliCommand,
		readFile,
		tmpContext,
	}) => {
		// The .neon only has projectId; checkout should look up the project's
		// org_id and write all three fields so the context file ends up complete.
		const ctx = tmpContext("heal_org", { projectId: "test" });
		await testCliCommand(
			["checkout", "main", "--no-env-pull", "--context-file", ctx],
			{
				mockDir: "checkout_heal_org",
			},
		);
		expect(parseContext(readFile(ctx))).toEqual({
			orgId: "org-healed-123",
			projectId: "test",
			branch: "main",
		});
	});

	test("resolves projectId from the .neon file when no flag is passed", async ({
		testCliCommand,
		readFile,
		tmpContext,
	}) => {
		const ctx = tmpContext("project_from_file", { projectId: "test" });
		await testCliCommand([
			"checkout",
			"main",
			"--no-env-pull",
			"--context-file",
			ctx,
		]);
		expect(parseContext(readFile(ctx))).toEqual({
			projectId: "test",
			branch: "main",
		});
	});

	test("auto-detects the project when the API key maps to a single project", async ({
		testCliCommand,
		readFile,
		tmpContext,
	}) => {
		// No --project-id and a fresh .neon: checkout should fall
		// back to single-project auto-detection (same behaviour as branches / cs).
		const ctx = tmpContext("autodetect_single");
		await testCliCommand(
			["checkout", "main", "--no-env-pull", "--context-file", ctx],
			{
				mockDir: "single_project",
			},
		);
		expect(parseContext(readFile(ctx))).toEqual({
			projectId: "test-project-123456",
			branch: "main",
		});
	});

	test("fails with a telling error when no project can be resolved (non-interactive)", async ({
		testCliCommand,
		removeFile,
		tmpContext,
	}) => {
		// Fresh .neon, no --project-id, and the mock account has no projects so
		// single-project auto-detection can't pick one. The forked CLI has no TTY,
		// so we expect the telling error instead of a prompt.
		const ctx = tmpContext("no_project");
		await testCliCommand(["checkout", "main", "--context-file", ctx], {
			mockDir: "checkout_no_project",
			code: 1,
			stderr: "ERROR: Could not determine which Neon project to check out a branch from. Provide one via the --project-id flag or a .neon file (created by `neonctl link` / `neonctl set-context`).",
		});
		removeFile(ctx);
	});

	test("fails with a helpful error when the branch is not found", async ({
		testCliCommand,
		removeFile,
		tmpContext,
	}) => {
		const ctx = tmpContext("not_found");
		await testCliCommand(
			[
				"checkout",
				"does-not-exist",
				"--project-id",
				"test",
				"--context-file",
				ctx,
			],
			{
				code: 1,
				stderr: "ERROR: Branch does-not-exist not found. Available branches: main, test_branch, 123, test_branch_with_fixed_cu, test_branch_with_autoscaling, protected_branch",
			},
		);
		removeFile(ctx);
	});

	test("errors when a branch id is not found (ids are never auto-created)", async ({
		testCliCommand,
		removeFile,
		tmpContext,
	}) => {
		// A `br-…` value is treated as an id and matched strictly; a non-existent
		// id is a hard not-found error (no create offer, even interactively).
		const ctx = tmpContext("id_not_found");
		await testCliCommand(
			[
				"checkout",
				"br-does-not-exist-123456",
				"--project-id",
				"test",
				"--context-file",
				ctx,
			],
			{
				code: 1,
				stderr: "ERROR: Branch br-does-not-exist-123456 not found. Available branches: main, test_branch, 123, test_branch_with_fixed_cu, test_branch_with_autoscaling, protected_branch",
			},
		);
		removeFile(ctx);
	});

	test("errors when no branch is given in a non-interactive context", async ({
		testCliCommand,
		removeFile,
		tmpContext,
	}) => {
		// Project resolves fine (from --project-id), but no branch was passed and
		// the forked CLI has no TTY, so the interactive picker is not available.
		const ctx = tmpContext("no_branch");
		await testCliCommand(
			["checkout", "--project-id", "test", "--context-file", ctx],
			{
				code: 1,
				stderr: "ERROR: No branch specified. Pass a branch name or id (e.g. `neonctl checkout main`), or run interactively to pick one from a list.",
			},
		);
		removeFile(ctx);
	});
});
